# improv_characters

./: README.md  character_list.json  frontend.py  generation.py  pyproject.toml  requirements.txt  scraper.py  test.ipynb
