[tool.poetry]
name = "impro-generator"
version = "0.1.0"
description = "Generating characters to play in an impro"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
ipywidgets = "^8.1.1"
streamlit = "^1.28.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
